# 2D-HeatEquation-solver

./: .gitignore  CMakeLists.txt  Dockerfile  README.md  runSolver.sh
src/main/: main.cpp
src/main/config/: param.cpp  param.h
src/main/derivatives/: derivative.cpp  derivative.h
src/main/fields/: fields.cpp  fields.h
src/main/newtonImpl/: newton.cpp  newton.h
src/main/solver/: Algorithm.cpp  Algorithm.h
src/main/streamfile/: vtkWriter.cpp  vtkWriter.h
src/main/utils/: utils.hpp
